--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	
+		<meta
+			name="keywords"
+			content="base react, base-react, base react vite, base antd, tranhoandz98's base react"
+		/>
+		<meta
+			name="description"
+			content="Base react antd vite ts."
+		/>
+
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+			rel="apple-touch-icon"
+			sizes="180X180"
+			href="./apple-icon-180.png"
+		/>
+    <meta name="theme-color" content="#171717" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<meta name="author" content="tranhoandz98" />
     <title>antd | Vite + React + TS</title>
+
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
